--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
+    "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
     "torch>=2.9.0",
     "transformers>=4.57.1",
 ]
